bench: fork every benchmark so arms stop contaminating each other